--- a/stockApp - userRest/package.json
+++ b/stockApp - userRest/package.json
@@ -2,10 +2,10 @@
   "name": "stockapp---userrest",
   "version": "1.0.0",
   "description": "",
-  "main": "userinfo_controller.mjs",
+  "main": "userFunds_controller.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon userinfo_controller.mjs"
+    "start": "nodemon userFunds_controller.mjs"
   },
   "author": "",
   "license": "ISC",
