--- a/stockApp - ui/package.json
+++ b/stockApp - ui/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.0.1",
     "@fortawesome/react-fontawesome": "^3.0.2",
     "axios": "^1.11.0",
+    "bcrypt": "^6.0.0",
     "cra-template": "1.2.0",
     "http-proxy-middleware": "^3.0.3",
     "react": "^19.0.0",
