--- a/stockApp - userRest/package.json
+++ b/stockApp - userRest/package.json
@@ -5,13 +5,16 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.mjs"
+    "start": "nodemon server.mjs",
+    "build-client": "cd \"../stockApp - ui\" && npm ci && npm run build",
+    "start:prod": "npm run build-client && node server.mjs"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validator": "^7.2.1",
